# Lundo

./: .dockerignore  .env.docker  .env.docker.example  .env.example  .gitignore  CLAUDE.md  FASTAPI_LEARNING_GUIDE.md  POSTGRESQL_LEARNING_GUIDE.md  README.md  alembic.ini  docker-compose.yml  fix-and-install-docker.sh  install-docker.sh  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  dependencies.py  main.py
app/agents/: supervisor.py
app/agents/skills/: base.py  behaviorist.py  developmental_psychology.py
app/agents/subagents/: __init__.py  behavior_analyst.py  deep_question_agent.py  exploration_agent.py  followup_question_agent.py  knowledge_compiler.py  material_consultant.py  simple_question_agent.py  topic_detector.py
app/api/v1/: auth.py  children.py  conversations.py  interrupts.py  memories.py
app/database/: base.py  session.py
app/database/migrations/: env.py
app/knowledge_base/: vector_store.py
app/knowledge_base/resources/: activities.json  books.json  strategies.json
app/memory/: backends.py  manager.py  schemas.py
app/models/: __init__.py  child.py  conversation.py  exploration_qa.py  message.py  user.py
app/safety/: content_filter.py  disclaimers.py  triggers.py
app/schemas/: __init__.py  auth.py  child.py  conversation.py  exploration.py
app/services/: agent_service.py  exploration_service.py  firebase.py
app/utils/: security.py
app/workflow/: graph.py  nodes.py  state.py
docker/: Dockerfile  entrypoint.sh
exampleUI/cognit/: App.tsx  CLAUDE.md  README.md  SETUP.md  index.html  metadata.json  package.json
exampleUI/cognit/backend/: package.json
exampleUI/cognit/components/: Agents.tsx  ChatInterface.tsx  Entrance.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Pricing.tsx  Research.tsx
exampleUI/cognit/contexts/: LanguageContext.tsx
frontend/: .env.development  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: api.ts  auth.ts  children.ts  conversations.ts  index.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/config/: firebase.ts
frontend/src/contexts/: AuthContext.tsx  (+3 more)
scripts/: init_database.py  seed_resources.py  test_system.py
(+82 files in other folders)
